[color-picker] updated snapshots

--- a/semcore/color-picker/src/style/color-picker.shadow.css
+++ b/semcore/color-picker/src/style/color-picker.shadow.css
@@ -132,6 +132,7 @@ SCloseIcon {
   border-radius: 50%;
   background-color: var(--gray-100);
   opacity: 0%;
+  z-index: 1;
 
   &:hover {
     display: flex;
