--- a/semcore/color-picker/src/style/color-picker.shadow.css
+++ b/semcore/color-picker/src/style/color-picker.shadow.css
@@ -1,7 +1,7 @@
 @import '@semcore/utils/style/var.css';
 
 SColorPickerPopper {
-  max-width: 234px;
+  max-width: calc(16px * 2 + 28px * 6 + 4px * 6);
   padding: 16px;
 }
 
@@ -10,8 +10,8 @@ SItemContainer {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 28px;
-  height: 28px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
   border: 1px solid transparent;
   outline: none;
@@ -27,6 +27,7 @@ SItemContainer {
     width: 22px;
     height: 22px;
     border-radius: 50%;
+    box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.1);
     background: var(--value);
   }
 }
@@ -51,7 +52,7 @@ SItemContainer[displayLabel] {
 
 SItemContainer:not([value]) {
   &::after {
-    border: 1px solid var(--gray-100);
+    border: 0.9px solid var(--gray-100);
   }
 }
 
@@ -81,7 +82,6 @@ SPlusButton {
   justify-content: center;
   width: 28px;
   height: 28px;
-  margin: 2px;
   border-radius: 50% !important;
   cursor: pointer;
 
@@ -109,6 +109,7 @@ STriggerCircle {
   border-radius: 50%;
   background-color: var(--value);
   border: 1px solid transparent;
+  box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
 
 STriggerCircle:not([value]) {
@@ -141,18 +142,19 @@ SCloseIcon {
 
 SLine {
   position: absolute;
-  left: 6px;
 }
 
 SLabel {
-  display: flex;
-  margin: auto;
   z-index: 1;
+  color: var(--value);
+  font-size: 13px;
+  font-weight: 700;
+  font-family: FactorA-Bold, sans-serif;
 }
 
 SItemColor {
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   border: 1px solid var(--gray-100);
   background: var(--value);
