--- a/semcore/color-picker/src/style/color-picker.shadow.css
+++ b/semcore/color-picker/src/style/color-picker.shadow.css
@@ -109,7 +109,6 @@ STriggerCircle {
   border-radius: 50%;
   background-color: var(--value);
   border: 1px solid transparent;
-  box-shadow: inset 0px 0px 1px rgba(0, 0, 0, 0.1);
 }
 
 STriggerCircle:not([value]) {
@@ -118,11 +117,8 @@ STriggerCircle:not([value]) {
 
 STriggerCircleLine {
   position: absolute;
-  top: 6px;
-  width: 12px;
-  height: 1px;
-  background: var(--gray-200);
-  transform: rotate(130deg);
+  top: 1px;
+  left: 1px;
 }
 
 SCloseIcon {
@@ -135,7 +131,7 @@ SCloseIcon {
   width: 12px;
   height: 12px;
   border-radius: 50%;
-  background-color: var(--gray-100);
+  background-color: var(--white);
   opacity: 0;
   z-index: 1;
 }
