[color-picker] fixed code review comments and docs

--- a/semcore/color-picker/src/style/color-picker.shadow.css
+++ b/semcore/color-picker/src/style/color-picker.shadow.css
@@ -82,7 +82,7 @@ SPlusButton {
   justify-content: center;
   width: 28px;
   height: 28px;
-  border-radius: 50% !important;
+  border-radius: 50%;
   cursor: pointer;
 
   &:hover {
