[input-number] added screen reader notification of input value

--- a/semcore/input-number/src/style/input-number.shadow.css
+++ b/semcore/input-number/src/style/input-number.shadow.css
@@ -69,3 +69,12 @@ SValue[disabled] ~ SControls {
   cursor: default;
   pointer-events: none;
 }
+
+SValueHidden {
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+}
