[input-mask] added accessibility for screen readers
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/input-mask/src/style/input-mask.shadow.css
+++ b/semcore/input-mask/src/style/input-mask.shadow.css
@@ -4,3 +4,12 @@ SValue {
   letter-spacing: 0.1em;
   text-overflow: inherit;
 }
+
+SValueAccessible {
+  width: 100%;
+  position: absolute;
+  left: 9px;
+  top: 6px;
+  pointer-events: none;
+  letter-spacing: 0.1em;
+}
