[tab-line, tab-panel, tag] enforced inner text font line height to prevent possible bottom cut
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/tab-line/src/style/tab-line.shadow.css
+++ b/semcore/tab-line/src/style/tab-line.shadow.css
@@ -114,15 +114,19 @@ SAddon {
 STabLineItem[size='m'] {
   height: 28px;
   min-width: 18px;
-  font-size: var(--fs-200);
-  line-height: var(--lh-200);
+  & SText {
+    font-size: var(--fs-200);
+    line-height: var(--lh-200);
+  }
 }
 
 STabLineItem[size='l'] {
   height: 40px;
   min-width: 26px;
-  font-size: var(--fs-300);
-  line-height: var(--lh-300);
+  & SText {
+    font-size: var(--fs-300);
+    line-height: var(--lh-300);
+  }
 }
 
 STabLineItem[neighborLocation='left'] {
