--- a/semcore/d3-chart/src/style/bubble.shadow.css
+++ b/semcore/d3-chart/src/style/bubble.shadow.css
@@ -1,5 +1,5 @@
 @import '@semcore/utils/style/var.css';
-@import '@semcore/d3-chart/src/style/var.css';
+@import './var.css';
 
 SBubble {
   fill: var(--blue-03);
