--- a/semcore/d3-chart/src/style/donut.shadow.css
+++ b/semcore/d3-chart/src/style/donut.shadow.css
@@ -1,5 +1,5 @@
 @import '@semcore/utils/style/var.css';
-@import '@semcore/d3-chart/src/style/var.css';
+@import './var.css';
 
 SPie {
   stroke: #ffffff;
