--- a/semcore/slider/src/style/slider.shadow.css
+++ b/semcore/slider/src/style/slider.shadow.css
@@ -3,14 +3,22 @@
 SSlider {
   position: relative;
   width: 140px;
-  background-color: var(--gray-100);
-  height: 4px;
-  border-radius: var(--rounded-m);
   box-sizing: border-box;
   cursor: pointer;
   outline: none;
+  padding-top: 20px;
 
-  &:hover {
+  &:before {
+    content: '';
+    position: absolute;
+    top: 8px;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    border-radius: var(--rounded-m);
+    background-color: var(--gray-100);
+  }
+  &:hover:before {
     background-color: var(--gray-200);
   }
 
@@ -31,11 +39,11 @@ SSlider[disabled] {
 
 SBar {
   position: absolute;
-  top: 0;
+  top: 8px;
   left: 0;
   overflow: hidden;
   height: 4px;
-  border-radius: 4px;
+  border-radius: var(--rounded-m);
   box-sizing: border-box;
   background-size: 12px;
   background-color: var(--blue-400);
@@ -44,7 +52,7 @@ SBar {
 
 SKnob {
   position: absolute;
-  top: 50%;
+  top: 10px;
   height: 20px;
   width: 20px;
   border-radius: 50%;
