[website] Add a11y for site
Signed-off-by: r.lysov <r.lysov@semrush.com>

<!--- Commit was signed off by r.lysov@semrush.com with GPG key ID A04B4646C408DA52 -->

--- a/website/src/pages/Home.module.css
+++ b/website/src/pages/Home.module.css
@@ -112,6 +112,11 @@
   font-size: 24px;
   font-weight: 700;
 }
+.started h2 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+}
 .started a {
   margin-top: 16px;
   color: #ff622d;
