--- a/website/src/pages/ContactUs.module.css
+++ b/website/src/pages/ContactUs.module.css
@@ -7,11 +7,12 @@
   max-width: 1140px;
   margin: 0 auto;
 }
-.content h2 {
+.content h1 {
   font-size: 50px;
   line-height: 110%;
   color: #171a22;
   margin: 0;
+  margin-bottom: 5px;
 }
 .content ul {
   padding: 0 24px;
@@ -44,7 +45,7 @@
     grid-template-rows: 0fr 2fr 3fr;
     padding: 136px 35px 96px;
   }
-  .content h2 {
+  .content h1 {
     font-size: 30px;
   }
 }
@@ -110,6 +111,7 @@
 }
 
 .title {
+  margin: 0;
   font-size: 30px;
   font-weight: 600;
   line-height: 120%;
