[input-mask] hancy a11y
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/input-mask/src/style/input-mask.shadow.css
+++ b/semcore/input-mask/src/style/input-mask.shadow.css
@@ -5,11 +5,14 @@ SValue {
   text-overflow: inherit;
 }
 
-SValueAccessible {
+SMask {
   width: 100%;
   position: absolute;
-  left: 9px;
+  left: 0.8em;
   pointer-events: none;
   letter-spacing: 0.1em;
   text-overflow: inherit;
+}
+SMaskHidden {
+  opacity: 0;
 }
