--- a/semcore/radio/src/style/radio.shadow.css
+++ b/semcore/radio/src/style/radio.shadow.css
@@ -55,7 +55,9 @@ SValue {
     left: 0;
     right: 0;
     bottom: 0;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 0;
     height: 0;
     border-radius: 50%;
